--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <html>
     <head>
-        <title>I am the title! wassup</title>
+        <title>HTML Learning Webpage</title>
     </head>
+    <header1> This is header 1 </header1>
+    <header2>this is header 2</header2>
+    <header5> this is header 5</header5>
   <body>
-    Hello there, awesome person! This is a test.
+    This is the Body Text.
   </body>
 </html>
