--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 <script src="main.js"></script>
             </div>
             <div align="center" class="search">
-               <! <input type="text" id="searchbar" placeholder=" search with google...">
-               <input type="text" id="searchbar" placeholder="search with google...">
+               <! <input type="text" id="searchbar" placeholder=" search with duck duck go...">
+               <input type="text" id="searchbar" placeholder="search with duck duck go...">
                 <script src="search.js"></script>
             </div>
             <div class="container" align="center">
