--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="box3">
                     <a href="https://outlook.office.com/mail/inbox">Outlook</a>
                     <br>
-                    <a href="https://elearn.mtsu.edu/d2l/home">D2L</a>
+                    <a href="https://canvas.ku.edu/">Canvas</a>
                     <br>
                     <a href="https://github.com/CaptainAsbestos?tab=repositories">GitHub</a>
                 </div>
