--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ setInterval(updateClock, 60000);
                     <br>
                     <a href="https://canvas.ku.edu/">Canvas</a>
                     <br>
+                    <a href="https://lib.ku.edu/">KU Library</a>
                     <a href="https://github.com/CaptainAsbestos?tab=repositories">GitHub</a>
                 </div>
                 <div id="box2">
