--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ setInterval(updateClock, 60000);
 </script>
             </div>
             <div align="center" class="search">
-               <! <input type="text" id="searchbar" placeholder=" search with duck duck go...">
-               <input type="text" id="searchbar" placeholder="search with duck duck go...">
+               <! <input type="text" id="searchbar" placeholder=" search with google...">
+               <input type="text" id="searchbar" placeholder="search with google...">
                 <script src="search.js"></script>
             </div>
             <div class="container" align="center">
